@@ -1621,4 +1621,6 @@ Changed: Improved internal random number generator engine (RAND function).
 
 16-10-2019, Coruja
 Fixed: Accounts being created with FIRSTCONNECTDATE/LASTCONNECTDATE property already set.
+Fixed: Linux build not enabling console text colors on modern terminals.
+Fixed: Linux build not showing console exceptions.
 [sphere_msgs.scp]: Removed unused messages 'msg_acc_badpass', 'msg_acc_needpass', 'msg_acc_wcli', 'console_no_admin', 'console_welcome_1'
